<resources>
    <string name="app_name">LoginMVVM</string>
    <string name="radio_button_guest_user">Guest</string>
    <string name="radio_button_registered_user">Login</string>
    <string name="text_view_user_id">Username</string>
    <string name="text_view_password">Password</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">閉じる</string>
    <string name="dialog_message_login_failed">ログインできませんでした。</string>
    <string name="button_login">ログイン</string>
    <string name="button_logout">ログアウト</string>
</resources>